Part 1 complete: 14 unit tests, rubric-aligned messages, registration and login feature